--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -284,7 +284,7 @@
 		<p id="qrcodelinkcautiontext" style="font-family: 'Dosis', sans-serif; font-size:16px; margin-bottom:50px;">
                     Be cautious of sharing personal information
                 </p>
-		<div id="localshortcutcontainerdiv" style="border-radius: 20px; background: #00df52; margin-bottom:125px; color: black; padding:20px; min-width:fit-content; max-width: 75%;">
+		<div id="localshortcutcontainerdiv" class="localshortcutcontainerdiv" style="border-radius: 20px; background: #00df52; margin-bottom:125px; color: black; padding:20px; min-width:fit-content; max-width: 75%;">
                         <p style="color:black; font-size:27px;"><i class="fa-solid fa-location-pin-lock"></i> Local Shortcut</p>
                         <p style="font-family: 'Dosis', sans-serif; color:black; font-size:16px;">
                             For a dynamic bookmark that updates with changes saved</br>to Dashboard, use your personal Local Shortcut link
