--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -154,25 +154,25 @@
             </datalist>
             <div id="settingssidebarpaneshareable">
                 <h3>Shareable</h3>
-                <a class="sidebaranchor" href="#generaloptions"><i style="background:linear-gradient(to bottom right, #000000, #2e0960); color:#8426FF" class="fa-regular fa-clock"></i> General</a>
+                <a class="sidebaranchor" href="#generaloptions"><i style="background:linear-gradient(to bottom right, #000000, #2e0960); color:#8426FF; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3);" class="fa-regular fa-clock"></i> General</a>
                 <br>
-                <a class="sidebaranchor" href="#customizationoptions"><i style="background:linear-gradient(to bottom right, #000000, #033246); color:#00b2ff" class="fa-solid fa-palette"></i> Customization</a>
+                <a class="sidebaranchor" href="#customizationoptions"><i style="background:linear-gradient(to bottom right, #000000, #033246); color:#00b2ff; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3);" class="fa-solid fa-palette"></i> Customization</a>
                 <br>
-                <a id="optionsendinganchor" class="sidebaranchor" href="#endingoptions"><i style="background:linear-gradient(to bottom right, #000000, #033415); color:#00ba44; transition:opacity 1s ease-in-out;" class="fa-solid fa-flag-checkered"></i> Ending</a>
+                <a id="optionsendinganchor" class="sidebaranchor" href="#endingoptions"><i style="background:linear-gradient(to bottom right, #000000, #033415); color:#00ba44; transition:opacity 1s ease-in-out; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3);" class="fa-solid fa-flag-checkered"></i> Ending</a>
                 <br>
-                <a class="sidebaranchor" href="#scheduleoptions"><i style="background:linear-gradient(to bottom right, #000000, #482e06); color:#FF9900;" class="fa-solid fa-calendar"></i> Schedule</a>
+                <a class="sidebaranchor" href="#scheduleoptions"><i style="background:linear-gradient(to bottom right, #000000, #482e06); color:#FF9900; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3);" class="fa-solid fa-calendar"></i> Schedule</a>
                 <br>
-                <a id="optionsprogressanchor" class="sidebaranchor" href="#progressoptions"><i style="background:linear-gradient(to bottom right, #000000, #2e0960); color:#8426FF; transition:opacity 1s ease-in-out;" class="fa-solid fa-spinner"></i> Progress</a>
+                <a id="optionsprogressanchor" class="sidebaranchor" href="#progressoptions"><i style="background:linear-gradient(to bottom right, #000000, #2e0960); color:#8426FF; transition:opacity 1s ease-in-out; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3);" class="fa-solid fa-spinner"></i> Progress</a>
             </div>
             <div id="settingssidebarpanepersonal">
                 <h3>Personal</h3>
-                <a class="sidebaranchor" href="#appearanceoptions"><i style="background:linear-gradient(to bottom right, #000000, #033246); color:#00b2ff" class="fa-solid fa-circle-half-stroke"></i> Appearance</a>
+                <a class="sidebaranchor" href="#appearanceoptions"><i style="background:linear-gradient(to bottom right, #000000, #033246); color:#00b2ff; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3);" class="fa-solid fa-circle-half-stroke"></i> Appearance</a>
                 <br>
-                <a class="sidebaranchor" href="#eouoptions"><i style="background:linear-gradient(to bottom right, #000000, #033415); color:#00ba44" class="fa-solid fa-child-reaching"></i> Ease of Use</a>
+                <a class="sidebaranchor" href="#eouoptions"><i style="background:linear-gradient(to bottom right, #000000, #033415); color:#00ba44; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3);" class="fa-solid fa-child-reaching"></i> Ease of Use</a>
                 <br>
-                <a id="optionsoianchor" class="sidebaranchor" href="#inclusionoptions"><i style="background:linear-gradient(to bottom right, #000000, #482e06); color:#FF9900; transition:opacity 1s ease-in-out; font-size:15px !important" class="fa-solid fa-puzzle-piece"></i> Only Include</a>
+                <a id="optionsoianchor" class="sidebaranchor" href="#inclusionoptions"><i style="background:linear-gradient(to bottom right, #000000, #482e06); color:#FF9900; transition:opacity 1s ease-in-out; font-size:15px !important; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3);" class="fa-solid fa-puzzle-piece"></i> Only Include</a>
                 <br>
-                <a class="sidebaranchor" href="#dangerzone"><i style="background:linear-gradient(to bottom right, #000000, #4c0c0c); color:#ff5353; transition:opacity 1s ease-in-out; font-size:15px !important" class="fa-solid fa-trash"></i> Danger Zone</a>
+                <a class="sidebaranchor" href="#dangerzone"><i style="background:linear-gradient(to bottom right, #000000, #4c0c0c); color:#ff5353; transition:opacity 1s ease-in-out; font-size:15px !important; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3);" class="fa-solid fa-trash"></i> Danger Zone</a>
             </div>
 
         </div>
