--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -154,25 +154,25 @@
             </datalist>
             <div id="settingssidebarpaneshareable">
                 <h3>Shareable</h3>
-                <a class="sidebaranchor" href="#generaloptions"><i style="background:#8426FF; color:white; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3);" class="fa-regular fa-clock"></i> General</a>
+                <a class="sidebaranchor" href="#generaloptions"><i style="background:#8426FF; color:white; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);" class="fa-regular fa-clock"></i> General</a>
                 <br>
-                <a class="sidebaranchor" href="#customizationoptions"><i style="background:#3ab6ff; color:white; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3);" class="fa-solid fa-palette"></i> Customization</a>
+                <a class="sidebaranchor" href="#customizationoptions"><i style="background:#3ab6ff; color:white; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);" class="fa-solid fa-palette"></i> Customization</a>
                 <br>
-                <a id="optionsendinganchor" class="sidebaranchor" href="#endingoptions"><i style="background:#00DF52; color:white; transition:opacity 1s ease-in-out; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3);" class="fa-solid fa-flag-checkered"></i> Ending</a>
+                <a id="optionsendinganchor" class="sidebaranchor" href="#endingoptions"><i style="background:#00DF52; color:white; transition:opacity 1s ease-in-out; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);" class="fa-solid fa-flag-checkered"></i> Ending</a>
                 <br>
-                <a class="sidebaranchor" href="#scheduleoptions"><i style="background:#FF9900; color:white; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3);" class="fa-solid fa-calendar"></i> Schedule</a>
+                <a class="sidebaranchor" href="#scheduleoptions"><i style="background:#FF9900; color:white; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);" class="fa-solid fa-calendar"></i> Schedule</a>
                 <br>
-                <a id="optionsprogressanchor" class="sidebaranchor" href="#progressoptions"><i style="background:#8426FF; color:white; transition:opacity 1s ease-in-out; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3);" class="fa-solid fa-spinner"></i> Progress</a>
+                <a id="optionsprogressanchor" class="sidebaranchor" href="#progressoptions"><i style="background:#8426FF; color:white; transition:opacity 1s ease-in-out; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);" class="fa-solid fa-spinner"></i> Progress</a>
             </div>
             <div id="settingssidebarpanepersonal">
                 <h3>Personal</h3>
-                <a class="sidebaranchor" href="#appearanceoptions"><i style="background:#3ab6ff; color:white; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3);" class="fa-solid fa-circle-half-stroke"></i> Appearance</a>
+                <a class="sidebaranchor" href="#appearanceoptions"><i style="background:#3ab6ff; color:white; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);" class="fa-solid fa-circle-half-stroke"></i> Appearance</a>
                 <br>
-                <a class="sidebaranchor" href="#eouoptions"><i style="background:#00DF52; color:white; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3);" class="fa-solid fa-child-reaching"></i> Ease of Use</a>
+                <a class="sidebaranchor" href="#eouoptions"><i style="background:#00DF52; color:white; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);" class="fa-solid fa-child-reaching"></i> Ease of Use</a>
                 <br>
-                <a id="optionsoianchor" class="sidebaranchor" href="#inclusionoptions"><i style="background:#FF9900; color:white; transition:opacity 1s ease-in-out; font-size:15px !important; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3);" class="fa-solid fa-puzzle-piece"></i> Only Include</a>
+                <a id="optionsoianchor" class="sidebaranchor" href="#inclusionoptions"><i style="background:#FF9900; color:white; transition:opacity 1s ease-in-out; font-size:15px !important; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);" class="fa-solid fa-puzzle-piece"></i> Only Include</a>
                 <br>
-                <a class="sidebaranchor" href="#dangerzone"><i style="background:#ff5353; color:white; transition:opacity 1s ease-in-out; font-size:15px !important; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3);" class="fa-solid fa-trash"></i> Danger Zone</a>
+                <a class="sidebaranchor" href="#dangerzone"><i style="background:#ff5353; color:white; transition:opacity 1s ease-in-out; font-size:15px !important; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);" class="fa-solid fa-trash"></i> Danger Zone</a>
             </div>
 
         </div>
