--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -862,9 +862,9 @@ loadLinks();
 	/*rgba(220, 220, 220, 0.23)*/
 	--placeholderbordercolor: #666;
 	/*#bababa*/
-    --cardbeforeglow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3);
+    --cardbeforeglow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 0 0px rgba(255, 255, 255, 0);
     /*inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 0 18px rgba(255, 255, 255, 0.3);*/
-    --cardborder:1.54px solid rgba(255, 255, 255, 0.1), inset 0 0 0px rgba(255, 255, 255, 0);
+    --cardborder:1.54px solid rgba(255, 255, 255, 0.1);
     /*1.54px solid rgba(0, 0, 0, 0.1);*/
 }
 *{
