--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -1151,6 +1151,7 @@ z-index: 0;
         display: inline-block;
         width:30px;
         height:30px;
+        box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);
     }
 
     a i{
