--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -190,7 +190,7 @@
                 <Br>
                 <a title="Close options" onclick="settings(); SetCountDowngeneral();"><i class="fa-solid fa-gear"></i> Close</a>
                 <a title="Get a shareable link or QR code" id="sharebuttonoptions" class="sharebutton" href="#linkoptions"><i class="fa-solid fa-arrow-up-from-bracket"></i> Share</a>
-		<a title="Countdown Dashboard" id="dashboardbuttonoptions" class="dashboardbutton" href="https://michaeldors.com/mcacountdown/countdowndashboard"><i class="fa-solid fa-border-all"></i> Dashboard</a>
+		<a title="Countdown Dashboard" id="dashboardbuttonoptions" class="dashboardbutton" href="countdowndashboard"><i class="fa-solid fa-border-all"></i> Dashboard</a>
                 <a title="Save to Countdown Dashboard" id="savedash" class="savedash" onclick="savetodash();"><i class="fa-solid fa-star"></i> Save</a>
 
 		<div id="debugoptions" style="display:none;">
@@ -567,6 +567,7 @@
     <a id="soce" class="disabled" onclick="soce();"><i class="fa-solid fa-volume-mute"></i> Disable End Sounds</a>
     <a id="memsav" class="disabled" onclick="memsav();"><i class="fa-solid fa-gauge-high"></i> Memory Saver</a>
 	<a id="contrast" class="disabled" onclick="contrast();"><i class="fa-solid fa-circle-half-stroke"></i> Increase Contrast</a>
+	<a style="display:none;" id="opendyslexic" class="disabled" onclick="opendyslexic();"><i class="fa-solid fa-font"></i> Force OpenDyslexic Font</a>
 <br>
     <Br>
     <Br>
