--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -270,7 +270,7 @@
                 </button>
                 <br />
                 <br />
-                <div id="qrcodecontainerdiv" style="border-radius: 20px; background: linear-gradient(to bottom right, #FFFFFF, #FFFFFF, #BD8BFF);margin-bottom:20px; padding: 20px; color: black; height: 180px; width:fit-content;">
+                <div id="qrcodecontainerdiv" style="border-radius: 20px; background: linear-gradient(to bottom right, #FFFFFF, #FFFFFF, #BD8BFF);margin-bottom:20px; padding: 20px; color: black; height: 180px; width:fit-content; max-width:75%;">
                     <div id="qrcode" style="float: left; box-shadow: #ffffff 1px 1px 25px; padding-top: 15px; padding-left:20px; transform:scale(1.1)"></div>
                     <div style="float:left; padding-left:30px; text-align:left;">
                         <p style="color:black; font-size:27px; line-height:0.1;">QR Code</p>
