--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -172,6 +172,8 @@
                 <br>
                 <a id="optionsoianchor" class="sidebaranchor" href="#inclusionoptions"><i style="background:#FF9900; color:white; transition:opacity 1s ease-in-out; font-size:15px !important; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);" class="fa-solid fa-puzzle-piece"></i> Only Include</a>
                 <br>
+                <a class="sidebaranchor"><i style="background:#8426FF; color:white; transition:opacity 1s ease-in-out; font-size:15px !important; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);" class="fa-solid fa-book"></i> Documentation</a>
+                <br>
                 <a class="sidebaranchor" href="#dangerzone"><i style="background:#ff5353; color:white; transition:opacity 1s ease-in-out; font-size:15px !important; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);" class="fa-solid fa-trash"></i> Danger Zone</a>
             </div>
 
@@ -182,7 +184,7 @@
                 <Br>
                 <h1 class="textelement">Options</h1>
                 <p class="textelement" style="max-width:85%;">
-		<a class="aintext dependencieslink" href="http://605958.xyz/"><i style="margin-right:10px;" class="fa-solid fa-house"></i> Home</a>
+		            <a class="aintext dependencieslink" href="http://605958.xyz/"><i style="margin-right:10px;" class="fa-solid fa-house"></i> Home</a>
                     <a class="aintext dependencieslink" href="docs#cookiepolicy" target="_blank" rel="noopener noreferrer"><i style="margin-right:10px;" class="fa-solid fa-cookie-bite"></i> Cookie Policy</a>
                     <a class="aintext dependencieslink" href="Information/dependencies" target="_blank" rel="noopener noreferrer"><i style="margin-right:10px;" class="fa-solid fa-file-code"></i> Dependencies</a>
                 </p>
