--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -172,7 +172,7 @@
                 <br>
                 <a id="optionsoianchor" class="sidebaranchor" href="#inclusionoptions"><i style="background:#FF9900; color:white; transition:opacity 1s ease-in-out; font-size:15px !important; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);" class="fa-solid fa-puzzle-piece"></i> Only Include</a>
                 <br>
-                <a class="sidebaranchor"><i style="background:#8426FF; color:white; transition:opacity 1s ease-in-out; font-size:15px !important; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);" class="fa-solid fa-book"></i> Documentation</a>
+                <a class="sidebaranchor" href="docs"><i style="background:#8426FF; color:white; transition:opacity 1s ease-in-out; font-size:15px !important; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);" class="fa-solid fa-book"></i> Documentation</a>
                 <br>
                 <a class="sidebaranchor" href="#dangerzone"><i style="background:#ff5353; color:white; transition:opacity 1s ease-in-out; font-size:15px !important; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);" class="fa-solid fa-trash"></i> Danger Zone</a>
             </div>
