--- a/mcacountdown/docs.html
+++ b/mcacountdown/docs.html
@@ -203,9 +203,9 @@
 
         #returnbutton{
                 position: absolute; /* Use absolute positioning relative to the sidebar */
-    bottom: 0; /* Place it at the bottom of the sidebar */
+    bottom: -10px; /* Place it at the bottom of the sidebar */
     width: 100%; /* Ensure it spans the full width of the sidebar */
-    background: linear-gradient(to top, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0)); /* Gradient fading out upwards */
+    background: linear-gradient(to top, var(--mainbgcolor), rgba(255, 255, 255, 0)); /* Gradient fading out upwards */
     padding: 10px; /* Add some padding for better aesthetics */
     text-align: left; /* Center the content inside the button */
             z-index: 10000000000000000000000000000000000; /* Ensure it is above other content */
