--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -576,7 +576,7 @@
     <h1 id="inclusionoptions" class="textelement">
         Only Include
     </h1>
-	<p id="cdscheduledisclaimer" style="font-family: 'Dosis', sans-serif; font-size:16px; margin-bottom:30px; display:none; background:linear-gradient(to bottom right, #ff53535f, #00000000); border:#ff5353 2px dashed; border-radius:100px; padding:5px 10px 5px 10px; width:fit-content;"><i class="fa-regular fa-calendar-xmark"></i> Only Include will not apply to Countdown Schedules</p>
+	<p id="cdscheduledisclaimer" style="font-family: 'Dosis', sans-serif; font-size:16px; margin-bottom:30px; display:none; background:linear-gradient(to bottom right, #d616165f, #00000000); border:#ff5353 2px solid; border-radius:100px; padding:5px 10px 5px 10px; width:fit-content;"><i class="fa-regular fa-calendar-xmark"></i> Only Include will not apply to Countdown Schedules</p>
         <Br>
         <br>
         <br>
@@ -597,7 +597,10 @@
     <br>
     <br>
     <br>
+    <p style="color:white; font-family: Dosis; font-size:17px; margin-bottom:20px;">Countdown is a free service provided by <a class="aintext" style="color:white; font-family: Dosis; font-size:17px; margin-bottom:20px; text-decoration: underline;" href="michaeldors.com">michaeldors.com</a>.</p>
+
       </div>
+
     </center>
     </div>
 
