--- a/WorshipNight/questions.html
+++ b/WorshipNight/questions.html
@@ -3,20 +3,49 @@
 <head>
   <meta charset="UTF-8" />
   <title>Worship Night '25</title>
+  <meta property="og:image" content="images/worshipnightannouncement.PNG" />
+  <meta property="og:title" content="Worship Night" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="Join us for a night of glorifying God together" />
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+  <link rel="icon" type="image/x-icon" href="images/icon.ico">
+  <meta name="theme-color" content="ffc600" />
   <style>
-    body { font-family: sans-serif; padding: 2rem; max-width: 600px; margin: auto; }
-    input, textarea { display: block; width: 100%; margin-bottom: 1rem; padding: 0.5rem; }
-    button { padding: 0.5rem 1rem; }
+    body { 
+        font-family: sans-serif; 
+        padding: 2rem; 
+        max-width: 600px; 
+        margin: auto; 
+        background: url('https://michaeldors.com/WorshipNight/images/bg.PNG') no-repeat center center fixed;
+        background-size: cover;
+    }
+    input, textarea, select { display: block; width: 100%; margin-bottom: 1rem; padding: 0.5rem; border-radius: 20px; height:20px; background-color: black; color:white; border: none; padding-top:15px; padding-bottom:15px;}
+    button { padding: 0.5rem 1rem; background-color: black; border-radius: 10px; color:white; border:none; padding:20px;}
+    .formcontainer{
+      /* From https://css.glass */
+background: #ffc600;
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+border: 1px solid rgba(0, 0, 0, 0.3);
+padding:50px;
+box-shadow:inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);
+
+    }
   </style>
 </head>
 <body>
-  <h1>Contact Us</h1>
+  <img src="images/wordmark.PNG" style="max-width:600px">
+
+  <div class="formcontainer">
+  <h1>Have Questions?</h1>
   <form id="contact-form-questions">
     <input name="name" placeholder="Your name" required />
     <input type="email" name="email" placeholder="Your email" required />
     <textarea name="message" placeholder="Your message" required></textarea>
     <button type="submit">Send</button>
   </form>
+  </div>
 
   <script type="module">
     import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
