--- a/WorshipNight/questions.html
+++ b/WorshipNight/questions.html
@@ -8,41 +8,76 @@
   <meta property="og:type" content="website" />
   <meta property="og:description" content="Join us for a night of glorifying God together" />
 
+  <link href="https://fonts.cdnfonts.com/css/helvetica-neue-55" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
   <link rel="icon" type="image/x-icon" href="images/icon.ico">
   <meta name="theme-color" content="ffc600" />
   <style>
+    @font-face{
+      font-family: 'WorshipNight';
+      src: url('https://mailchimp.com/release/plums/ea9371020395bcec.woff2') format('woff2');
+    }
     body { 
-        font-family: sans-serif; 
+        font-family: 'WorshipNight';
         padding: 2rem; 
         max-width: 600px; 
         margin: auto; 
         background: url('https://michaeldors.com/WorshipNight/images/bg.PNG') no-repeat center center fixed;
         background-size: cover;
     }
-    input, textarea, select { display: block; width: 100%; margin-bottom: 1rem; padding: 0.5rem; border-radius: 20px; height:20px; background-color: black; color:white; border: none; padding-top:15px; padding-bottom:15px;}
-    button { padding: 0.5rem 1rem; background-color: black; border-radius: 10px; color:white; border:none; padding:20px;}
+    input, textarea { 
+        display: block; 
+        width: calc(100% - 40px); 
+        margin-bottom: 1rem; 
+        padding: 0.5rem; 
+        border-radius: 20px; 
+        height:20px; 
+        background-color: black; 
+        color:white; 
+        border: none; 
+        padding-top:15px; 
+        padding-bottom:15px; 
+        padding-left:20px;
+    }
+    textarea {
+        height: 100px;
+    }
+    button { 
+        padding: 1rem 5rem; 
+        background-color: black; 
+        border-radius: 20px; 
+        color:white; 
+        border:none; 
+        cursor: pointer; 
+        transition: background-color 0.3s;
+        box-shadow:inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);
+    }
+    button:hover { 
+        background-color: #333; 
+    }
     .formcontainer{
-      /* From https://css.glass */
-background: #ffc600;
-border-radius: 16px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-border: 1px solid rgba(0, 0, 0, 0.3);
-padding:50px;
-box-shadow:inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);
-
+        background: #ffc600;
+        border-radius: 16px;
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+        border: 1px solid rgba(0, 0, 0, 0.3);
+        padding:50px;
+        padding-top:15px;
+        padding-bottom:40px;
+        box-shadow:inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);
+        position: relative;
+        transition:0.5s all;
     }
   </style>
 </head>
 <body>
-  <img src="images/wordmark.PNG" style="max-width:600px">
+  <img src="images/wordmark.PNG" style="max-width:600px; cursor: pointer;" onclick="window.location.href='index.html'">
 
   <div class="formcontainer">
   <h1>Have Questions?</h1>
   <form id="contact-form-questions">
-    <input name="name" placeholder="Your name" required />
-    <input type="email" name="email" placeholder="Your email" required />
-    <textarea name="message" placeholder="Your message" required></textarea>
+    <input style="margin-bottom:0px; border-bottom-left-radius: 0px; border-bottom-right-radius: 0px;" name="name" placeholder="Your name" required />
+    <input style="margin:0px; border-radius: 0px; border-top:1px solid #ffc600" type="email" name="email" placeholder="Your email" required />
+    <textarea style="margin-top:0px; border-top-left-radius: 0px; border-top-right-radius: 0px; border-top:1px solid #ffc600" name="message" placeholder="Your message" required></textarea>
     <button type="submit">Send</button>
   </form>
   </div>
