--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -1042,6 +1042,7 @@ margin-bottom:300px;
     width:100%;
     font-family: 'Dosis' , sans-serif;
     overflow:hidden;
+	margin-right:20px;
 }
 
 .card:hover .remove-button{
