--- a/WorshipNight/questions.html
+++ b/WorshipNight/questions.html
@@ -39,6 +39,25 @@
         padding-bottom:15px; 
         padding-left:20px;
     }
+    @media (max-width: 768px) {
+        body {
+            padding: 1rem;
+        }
+        .formcontainer {
+            padding: 30px 20px;
+        }
+        input, textarea, select {
+            width: calc(100% - 30px);
+        }
+        button {
+            width: 100%;
+            padding: 1rem 0;
+        }
+        img {
+            width: 100%;
+            height: auto;
+        }
+    }
     textarea {
         height: 100px;
     }
@@ -73,7 +92,7 @@
   <img src="images/wordmark.PNG" style="max-width:600px; cursor: pointer;" onclick="window.location.href='index.html'">
 
   <div class="formcontainer">
-  <h1>Have Questions?</h1>
+  <h1>Have Prayer Requests?</h1>
   <form id="contact-form-questions">
     <input style="margin-bottom:0px; border-bottom-left-radius: 0px; border-bottom-right-radius: 0px;" name="name" placeholder="Your name" required />
     <input style="margin:0px; border-radius: 0px; border-top:1px solid #ffc600" type="email" name="email" placeholder="Your email" required />
