--- a/WorshipNight/decisions.html
+++ b/WorshipNight/decisions.html
@@ -7,7 +7,7 @@
   <meta property="og:title" content="Worship Night" />
   <meta property="og:type" content="website" />
   <meta property="og:description" content="Join us for a night of glorifying God together" />
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.cdnfonts.com/css/helvetica-neue-55" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
   <link rel="icon" type="image/x-icon" href="images/icon.ico">
@@ -15,12 +15,31 @@
   <style>
     body { 
         font-family: sans-serif; 
-        padding: 2rem; 
+        padding: 1rem; 
         max-width: 600px; 
         margin: auto; 
         background: url('https://michaeldors.com/WorshipNight/images/bg.PNG') no-repeat center center fixed;
         background-size: cover;
         font-family: 'WorshipNight';
+    }
+    @media (max-width: 768px) {
+        body {
+            padding: 1rem;
+        }
+        .formcontainer {
+            padding: 30px 20px;
+        }
+        input, textarea, select {
+            width: calc(100% - 30px);
+        }
+        button {
+            width: 100%;
+            padding: 1rem 0;
+        }
+        img {
+            width: 100%;
+            height: auto;
+        }
     }
     input, textarea, select { display: block; width: calc(100% - 40px); margin-bottom: 1rem; padding: 0.5rem; border-radius: 20px; height:20px; background-color: black; color:white; border: none; padding-top:15px; padding-bottom:15px; padding-left:20px;}
     button { padding: 1rem 5rem; background-color: black; border-radius: 20px; color:white; border:none; cursor: pointer; transition: background-color 0.3s;       box-shadow:inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);
