--- a/WorshipNight/questions.html
+++ b/WorshipNight/questions.html
@@ -7,7 +7,7 @@
   <meta property="og:title" content="Worship Night" />
   <meta property="og:type" content="website" />
   <meta property="og:description" content="Join us for a night of glorifying God together" />
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.cdnfonts.com/css/helvetica-neue-55" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
   <link rel="icon" type="image/x-icon" href="images/icon.ico">
@@ -45,17 +45,25 @@
         }
         .formcontainer {
             padding: 30px 20px;
+            margin: 0 10px;
         }
-        input, textarea, select {
+        input, textarea {
             width: calc(100% - 30px);
+            font-size: 16px;
         }
         button {
             width: 100%;
             padding: 1rem 0;
+            font-size: 16px;
         }
         img {
             width: 100%;
             height: auto;
+            margin-bottom: 1rem;
+        }
+        h1 {
+            font-size: 24px;
+            margin-bottom: 1.5rem;
         }
     }
     textarea {
