--- a/WorshipNight/index.html
+++ b/WorshipNight/index.html
@@ -67,6 +67,32 @@
         position: relative;
         transition:0.5s all;
     }
+    @media (max-width: 768px) {
+        body {
+            padding: 1rem;
+        }
+        .formcontainer {
+            padding: 30px 20px;
+        }
+        input, textarea {
+            width: calc(100% - 30px);
+            font-size: 16px;
+        }
+        button, a {
+            width: 70%;
+            padding: 1rem 0;
+            font-size: 16px;
+            margin: 5px 0 !important;
+        }
+        img {
+            width: 100%;
+            height: auto;
+            margin-bottom: 1rem;
+        }
+        div[style*="display: flex"] {
+            flex-direction: column;
+        }
+    }
   </style>
 </head>
 <body>
